--- a/Web-Proje-1/Home.css
+++ b/Web-Proje-1/Home.css
@@ -1,3 +1,6 @@
+:root{
+    color-scheme: dark;
+}
 *{
     margin: 0;
     padding: 0;
@@ -5,37 +8,51 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 /* navbar style start*/
-.ul{
-    padding:0;
-    margin:0;
-    list-style-type:none;
-    overflow: hidden;
+body{
+    background-image: url(/Web-Proje-1/Images/food-s-desktop.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 99.9%;
+    height: 768px;
+    color: rgb(34, 116, 187);
+    
+}
+.h1-ul{
+    display: inline-block;
     background-color: #2E2E2E;
-    position: fixed;
+    color: #F44336;
+    margin-left: 7px;
+    /* Name h1 Site */
+}
+ul{
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    overflow: hidden;
+    display: inline-block;
+    background-color: #2E2E2E;
     width: 100%;
-    height:7vh;
-    top: 0;
+    height: 6vh;
 }
 ul li{
     float: right;
-    margin-top: 10px;
+    padding: 7px;
+    margin: px;
 }
 ul li a{
-    height: 10px;
-    text-decoration: none;
-    padding: 20px;
-    color: #FFCF48;
-    transition: 0.5s;
+    text-decoration:none;
+    padding:10px;
+    color:#e3221e;
+    transition: 0.3s;
 }
 ul li a:hover{
-    background-color: #1919198f;
-    color: #e2f10e;
+    color:#e3221e;
+    background-color: #252525;
 }
 /* navbar style end */
-/* ------------------------------------------------ */
-/* Content style */
-.cont{
-    margin-top: 45px;
-    background-color: #d7d7d7;
+.cont-food{
+    width: 100%;
+    
+    margin-top: 725px;
+    height: 400px;
 }
-/* Content style */
